Bug，解决VS设计器不可用问题

--- a/NuGet/YY.NuGet.BuildCustomization.AS.nuspec
+++ b/NuGet/YY.NuGet.BuildCustomization.AS.nuspec
@@ -23,7 +23,7 @@
   </metadata>
   <files>
     <file src=".\YY.NuGet.BuildCustomization.AS.props" target="build\native\YY.NuGet.BuildCustomization.AS.props"/>
-    <file src="..\BuildCustomizations\as.targets" target="build\native\YY.NuGet.BuildCustomization.AS.targets"/>
-    <file src="..\BuildCustomizations\**" target="build\native\" exclude="..\BuildCustomizations\as.targets"/>
+    <file src=".\YY.NuGet.BuildCustomization.AS.targets" target="build\native\YY.NuGet.BuildCustomization.AS.targets"/>
+    <file src="..\BuildCustomizations\**" target="build\native\"/>
   </files>
 </package>
